# autocoder

./: .gitignore  README.md  pyproject.toml
src/autocoder/coders/: coder.py  openai_coder.py  openai_utils.py  prompt_utils.py  python_coder.py  utils.py
src/autocoder/core/: coder.py  tests.py
src/autocoder/models/: huggingface.py  openai.py  wrapper.py
src/autocoder/tests/: python_tests.py  tests.py
tests/coders/: python_coder_test.py
tests/models/: huggingface_test.py
tests/tests/: python_tests_test.py
